[workspace]

resolver = "2"

default-members = ["contract"]
members = ["model", "contract", "integration-tests", "proc_macros"]

[workspace.dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
fake = "2.8.0"
rand = "0.8.5"
futures = "0.3.28"
near-sdk = "4.1.1"
itertools = "0.11.0"
ed25519-dalek = { version = "2.0.0", features = ["rand_core"] }
base64 = "0.21.3"
sha256 = "1.3.0"

model = { path = "model" }
proc-macros = { path = "proc_macros" }
